fix(scss/footer): removed extra margin

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,7 +4,6 @@ footer {
     }
     position: absolute;
     bottom: 0;
-    margin: 0 1em;
     color: hsl(221, 70%, 55%);
     text-align: center;
     width: 100%;
